# py-dockerize-cinema

./: .Dockerignore  .dockerfile  .dockerignore  .dockignore  .dokerignore  .ens.sample  .env  .env-sample  .env.docker  .env.example  .env.sample  .env.sapmle  .env.template  .env_example  .env_sample  .envsample  .flake8  .gitignore  Docker-compose.yml  Dockerfile  OneNote Table Of Contents.onetoc2  README.md  app.env  cinema_serviсe_db_data.json  compose.yaml  django-compose.yml  docker-compose-local.yaml  docker-compose.yaml  docker-compose.yml  docker_compose.yaml  dockerfile  entrypoint.sh  env.sample  manage.py  packages.txt  pyproject.toml  requirements  requirements.txt  runserver.sh  start.sh  (+4 more)
.github/workflows/: test.yml
DRF_Cinema_Service/: asgi.py  settings.py  urls.py  wsgi.py
app/cinema/: serializers.py  urls.py  views.py
app/cinema/migrations/: 0001_initial.py
app/cinema_service/: settings.py  urls.py
app/user/: urls.py  views.py
cinema/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
cinema/commands/: wait_for_db.py
cinema/management/: __init__.py  await_db.py  wait_for_db.py
cinema/management command,/: wait_for_db.py
cinema/managment/: wait_for_db.py
cinema/migrations/: 0001_initial.py  0002_alter_movie_actors_alter_movie_genres_and_more.py  0002_initial.py
cinema/tests/: test_db_conn.py  test_movie_api.py
cinema_service/: .dockerignore  settings.py  urls.py
cinema_service/management/: __init__.py
commands/: wait_for_db.py
docker/django/: Dockerfile
docker/nginx/: Dockerfile  default_location  nginx.conf
dockerize/: apps.py
management/commands/: wait_for_db.py
src/: manage.py
src/cinema/: apps.py  models.py  serializers.py  urls.py  views.py
src/cinema_service/: asgi.py  settings.py  urls.py  wsgi.py
src/commands/: run_cinema_backend.sh
src/user/: admin.py  models.py  serializers.py  urls.py  views.py
user/: models.py  serializers.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_alter_user_managers_remove_user_username_and_more.py
(+32 files in other folders)
